<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            android:src="@drawable/bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="128dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_jargon"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="300dp"
                android:gravity="center"
                >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/login"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/register"
                android:textSize="18sp"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/primary"
                android:textColor="@color/white"
                />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>